Finished with general resource schema. Started with db error handler
