# library/api/resources/book.py
@@ -1,27 +1,30 @@
 from flask_restful import Resource, request
 from library import db
-from flasgger import validate
+from library.api.resources import LibApiResource
+from library.utils.validators import validate_api
 
 
-class BookList(Resource):
+class BookList(LibApiResource):
     def get(self):
-        books = db.book.get_all()
-        return books
+        return db.book.get_all()
 
+    @validate_api("book")
     def post(self):
-        validate(request.json, "book", "/home/dmitrii/code/library_SQL/library/openapi.yaml")
-        return db.book.new(request.json['title'], request.json['page_number'], request.json['author_id'],
-                           request.json['publisher_id'])
+        book_id = db.book.new(request.json['title'],  request.json['author_id'])
+        return book_id, 201
 
 
-class Book(Resource):
+class Book(LibApiResource):
     def get(self, book_id):
-        return db.book.get_all(book_id)
+        return db.book.get(book_id) or {}, 404
 
+    @validate_api("book")
     def put(self, book_id):
-        validate(request.json, "book", "/home/dmitrii/code/library_SQL/library/openapi.yaml")
-        return db.book.update(book_id, request.json['title'], request.json['page_number'], request.json['author_id'],
-                              request.json['publisher_id'])
+        if db.book.update(book_id, request.json['title'], request.json['author_id']):
+            return {}, 204
+        return {}, 404
 
     def delete(self, book_id):
-        return db.book.delete(book_id)
+        if db.book.delete(book_id):
+            return {}, 204
+        return {}, 404
