# library/api/resources/order.py
@@ -2,25 +2,31 @@ from flask_restful import Resource, request
 from library import db
 from flasgger import validate
 
+from library.utils.validators import validate_api
+
 
 class OrderList(Resource):
     def get(self, user_id=None):
-        orders = db.order.get_all()
-        return orders
+        return db.order.get_all()
 
+    @validate_api('order')
     def post(self, user_id):
-        validate(request.json, "order", "/home/dmitrii/code/library_SQL/library/openapi.yaml")
-        return db.order.new(user_id, request.json['inventory_id'], request.json['return_date'])
+        order_id = db.order.new(user_id, request.json['inventory_id'], request.json['return_date'])
+        return order_id, 201
 
 
 class Order(Resource):
     def get(self, order_id, user_id=None):
-        return db.order.get(order_id)
+        return db.order.get(order_id) or {}, 404
 
+    @validate_api('order')
     def put(self, order_id, user_id=None):
-        validate(request.json, "order", "/home/dmitrii/code/library_SQL/library/openapi.yaml")
-        return db.order.update(order_id, user_id, request.json['inventory_id'],
-                               request.json['return_date'])
+        if db.order.update(order_id, user_id, request.json['inventory_id'],
+                               request.json['return_date']):
+            return {}, 204
+        return {}, 404
 
     def delete(self, order_id, user_id=None):
-        return db.order.delete(order_id)
+        if db.order.delete(order_id):
+            return {}, 204
+        return {}, 404
