# library/api/resources/user.py
@@ -1,30 +1,34 @@
 from flask import request
 from flask_restful import Resource
 from library import db
+from library.utils.validators import validate_api
 
 
 class UserList(Resource):
     # TODO: Add Validation and Authentication for all endpoints
 
     def get(self):
-        users = db.user.get_all()
-        return users
+        return db.user.get_all()
 
+    @validate_api('user')
     def post(self):
-
-        # validate(request.json, "user", "/home/dmitrii/code/library_SQL/library/openapi.yaml")
-        # return db.book.new(request.json['title'], request.json['page_number'], request.json['author_id'],
-        #                            request.json['publisher_id'])
-        return db.user.new(request.json['firstName'], request.json['lastName'])
+        user_id = db.user.new(request.json['firstName'], request.json['lastName'], request.json['username'],
+                              request.json['password'], request.json['email'].lower())
+        return user_id, 201
 
 
 class User(Resource):
     def get(self, user_id):
-        return db.user.get(user_id)
+        return db.user.get(user_id) or {}, 404
 
+    @validate_api('user')
     def put(self, user_id):
-        # validate(request.json, "book", "/home/dmitrii/code/library_SQL/library/openapi.yaml")
-        return db.user.update(user_id, request.json['firstName'], request.json['lastName'])
+        if db.user.update(user_id, request.json['firstName'], request.json['lastName'], request.json['username'],
+                          request.json['password'], request.json['email'].lower()):
+            return {}, 204
+        return "User not found", 404
 
     def delete(self, user_id):
-        return db.user.delete(user_id)
+        if db.user.delete(user_id):
+            return {}, 204
+        return "", 404
